Completed Revisions for Mobile-First Responsive Design. Fixed markup errors in on HTML Contact Form exception for <ul> on line 78.  Fixed readability and clarity.  Added to About Me section.  Added email address to Contact Section. Modified Project texts section.  WIP.

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,6 @@
-/* @media all and (min-width: 600px) {
-    .services-wrapper {
-        justify-content: right;
-        width: 100%;
-        text-align: right;
-        margin: 10px;
-        padding: 10px;
-    }
-} */
+/***********************************/
 
-
+/* Mobile-First Styles */
 
 /* Master Styles */
 
@@ -24,7 +16,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 50px;
+    padding: 15px;
 }
 
 .nav-item {
@@ -103,18 +95,18 @@ body {
 
 .profile-pic-item img {
     border-radius: 48%;
-    width: 100%;
+    width: 75%;
     justify-content: center;
 }
 
 .profile-title h2, a {
     text-decoration: none;
     color: #000;
-    padding: 5px;
+    padding: 9px;
 }
 
 .profile-pic-item h2 {
-    font-size: 40px;
+    font-size: 30px; 
 }
 
 /* Portfolio Items Styles */
@@ -129,7 +121,7 @@ body {
 .portfolio-items-wrapper {
     display: flex;
     justify-content: center;
-    flex-flow: row wrap;
+    flex-direction: column;
     margin: 20px;
 }
 
@@ -196,18 +188,19 @@ body {
 }
 
 .services-wrapper h2 {
-    text-align: right;
+    text-align: left;
 }
 
 .services-wrapper ul {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
+    margin-left: 0;
 }
 
 .services-wrapper ul li {
     text-align: left;
-    width: 30%;
+    width: 80%;
     margin-right: 0;
 
 }
@@ -228,7 +221,7 @@ body {
 }
 
 .project-item-wrapper p {
-    text-align: right;
+    text-align: left;
 }
 
 .project-img-background {
@@ -239,17 +232,39 @@ body {
     background-repeat: no-repeat;
 }
 
-.project-text-wrapper {
-    display: flex;
-    justify-content: space-between;
+.project-h3 {
+    font-size: 23px;
 }
 
+.project-text-wrapper h3 {
+    text-align: center;
+    font-size: 35px;
+}
+
+.project-text-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+.project-text-wrapper ul {
+    flex-direction: row;
+    list-style-type: none;
+    padding: 0 0 0 45px;
+    margin: 0;
+}
+
+.project-text-skills {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 40px;
+}
 
 /* Contact Styles */
 
 .contact-wrapper {
-    justify-content: right;
-    text-align: right;
+    justify-content: left;
+    text-align: center; 
 }
 
 .contact-icon-bar {
@@ -265,7 +280,7 @@ body {
     margin: auto;
     margin-bottom: 20px;
     text-align: left;
-    width: 50%;
+    width: 80%;
 }
 
 form {
@@ -304,31 +319,34 @@ form textarea {
     overflow: hidden;
 }
 
-@media all and (max-width: 800px) {
+@media all and (min-width: 800px) {
+    .nav-group {
+        padding: 50px;
+    }
+
     .profile-pic-item img {
-        width: 75%;
+        width: 100%;
     }
 
     .profile-pic-item h2 {
-        font-size: 30px;
+        font-size: 40px;
     }
-
+    
     .services-wrapper h2 {
-        text-align: left;
+        text-align: right;
     }
 
     .services-wrapper ul {
-        align-items: flex-start;
-        margin-left: 0;
+        align-items: flex-end;
     }
 
     .services-wrapper ul li {
-        width: 80%;
+        width: 30%;
     }
 
     .contact-wrapper {
-        justify-content: left;
-        text-align: left;
+        justify-content: right;
+        text-align: right;
     }
 
     .contact-form {
@@ -337,14 +355,26 @@ form textarea {
 
     .project-text-wrapper {
         flex-direction: column;
-        justify-content: left;
+        justify-content: space-between;
     }
-    
+
+    .portfolio-items-wrapper {
+        flex-direction: row;
+    }
+
     .project-item-wrapper p {
         text-align: left;
+        font-size: 16px;
     }
-    
+
     .project-text-wrapper h3 {
-        text-align: center;
+        font-size: 30px;
+        font-weight: bold;
     }
+
+    .project-text-skills {
+        justify-content: flex-end;
+        margin-right: 40px;
+    }
+
 }
